Initial work on 2.0.0 update